--- a/partner-landing.html
+++ b/partner-landing.html
@@ -15,10 +15,12 @@
 <body>
     <header class="hero">
         <div class="container">
+           <div class="logo-container">
             <img src="https://res.cloudinary.com/ddiffs1l5/image/upload/v1745659102/Untitled_design_4_ualuid.png" class="img">
-            <h1>Connecting Talent with Opportunity</h1>
-            <p>Revolutionizing on-demand services by empowering skilled professionals and simplifying everyday life</p>
-            <div>
+            
+            <h1 class="logo-text">Connecting Talent with Opportunity</h1>
+            <p class="logo-text">Revolutionizing on-demand services by empowering skilled professionals and simplifying everyday life</p>
+            </div>
                 <a href="#signup" class="btn btn-primary">Contact details</a>
                 <a href="#services" class="btn btn-secondary">Offer Services</a>
             </div>
