--- a/partner-landing.html
+++ b/partner-landing.html
@@ -18,7 +18,7 @@
            <div class="logo-container">
             <img src="https://res.cloudinary.com/ddiffs1l5/image/upload/v1745659102/Untitled_design_4_ualuid.png" class="img">
             
-            <h1 class="logo-text">Connecting Talent with Opportunity</h1>
+            <h1>Connecting Talent with Opportunity</h1>
             <p>Revolutionizing on-demand services by empowering skilled professionals and simplifying everyday life</p>
             </div>
                 <a href="#signup" class="btn btn-primary">Contact details</a>
