--- a/partner-landing.html
+++ b/partner-landing.html
@@ -91,35 +91,35 @@
     </div>
     </section>
 
-    <section id="services"class="container">
+   <section id="services" class="container">
         <h2>Our Services</h2>
-        <div class="features">
-            <div class="feature-card">
+        <div class="services">
+            <div class="service-card">
                 <img src="electrician-icon.png" alt="Electrician">
                 <h3>Electricians</h3>
                 <p>Residential and security system experts</p>
             </div>
-            <div class="feature-card">
+            <div class="service-card">
                 <img src="photographer-icon.png" alt="Photographer">
                 <h3>Photographers/Videographers</h3>
                 <p>Event, portrait, and fashion specialists</p>
             </div>
-            <div class="feature-card">
+            <div class="service-card">
                 <img src="painter-icon.png" alt="Painter">
                 <h3>Painters</h3>
                 <p>Interior and exterior painting</p>
             </div>
-            <div class="feature-card">
+            <div class="service-card">
                 <img src="plumber-icon.png" alt="Plumber">
                 <h3>Plumbers</h3>
                 <p>Home plumbing and repair services</p>
             </div>
-            <div class="feature-card">
+            <div class="service-card">
                 <img src="artist-icon.png" alt="Artist">
                 <h3>Sketch Artists</h3>
                 <p>For portraits and events</p>
             </div>
-            <div class="feature-card">
+            <div class="service-card">
                 <img src="catering-icon.png" alt="Catering">
                 <h3>Catering Staff</h3>
                 <p>For events and parties</p>
