--- a/partner-landing.html
+++ b/partner-landing.html
@@ -96,7 +96,8 @@
                 <p>Residential and security system experts</p>
             </div>
             <div class="service-card">
-                <h3>Photographers/ </br> Videographers</h3>
+                <h3>Photographers </h3>
+               <h3>Videographers</h3>
                 <p>Event, portrait, and fashion specialists</p>
             </div>
             <div class="service-card">
