--- a/partner-landing.html
+++ b/partner-landing.html
@@ -161,7 +161,7 @@
                     <p>Connecting talent with opportunity.</p>
                 </div>
                 <div class="footer-contact">
-                    <h3>Contact Our Partnerships Team</h3>
+                     <h3 style="text-align: center;">Contact Our Partnerships Team</h3>
                     <ul>
                         <li><i class="fas fa-envelope"></i> skillconnectpartner@gmail.com</li>
                         <li><i class="fas fa-phone"></i> +91 8074236286</li>
