--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="cta-buttons">
                 <a href="#contact" class="btn btn-primary">Schedule a Call</a>
                 <a href="mailto:skillconnectpartner@gmail.com?subject=Partnership%20Inquiry&body=Hello%20SkillConnect%20Team,%0D%0A%0D%0AI%20am%20interested%20in%20partnering%20with%20you.%20Please%20contact%20me%20back.%0D%0A%0D%0ARegards," class="btn btn-outline">Email Us</a>
-                <a href="https://wa.me/918074236286?text=Hi%20Pavani%27s%20Beauty%20Studio%2C%20I%20would%20like%20to%20book%20an%20appointment" class="btn btn-outline" target="_blank" rel="noopener noreferrer" style="margin-top:15px;"><i class="fab fa-whatsapp"></i> Chat on WhatsApp</a>
+                <a href="https://wa.me/918074236286?text=Hi%20Vinay%27s%20I%20Studio%2C%20I%20would%20like%20to%20Partner%20Of%20SkillConnect" class="btn btn-outline" target="_blank" rel="noopener noreferrer" style="margin-top:15px;"><i class="fab fa-whatsapp"></i> Chat on WhatsApp</a>
 
             </div>
         </div>
